stopped lightsabers from clipping on footer

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -245,6 +245,8 @@ p header-mini{
 
 footer{
 	background-color:black;
+	position: relative;
+	top: 25px;
 	text-align: center;
 	float:none;
 	color: gray;
